--- a/CoffeeCounter/app/src/main/res/layout/activity_main.xml
+++ b/CoffeeCounter/app/src/main/res/layout/activity_main.xml
@@ -1,15 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context="com.davidshimel.coffeecounter.MainActivity">
 
+    <TextView
+        android:id="@+id/stats"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:text="You drank 0 coffees today."
+        tools:text="You drank 5 coffees today"/>
+    <ListView
+        android:id="@+id/drink_list"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/stats"
+        android:layout_above="@+id/drink_button">
+
+    </ListView>
     <Button
-        android:id="@+id/drink_button"
+        android:id="@id/drink_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/drink_button_text"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:text="@string/drink_button_text" />
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
