--- a/coffee-counter/app/src/main/res/layout/activity_main.xml
+++ b/coffee-counter/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,7 @@
 
 
     <Button
-        android:id="@+id/drink_button"
+        android:id="@id/drink_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/drink_button_text"
