--- a/coffee-counter/app/src/main/res/layout/activity_main.xml
+++ b/coffee-counter/app/src/main/res/layout/activity_main.xml
@@ -8,18 +8,17 @@
     tools:context="com.davidshimel.coffee_counter.MainActivity">
 
     <ListView
-        android:layout_height="wrap_content"
-        android:layout_width="0dp"
         android:id="@+id/coffee_times_list"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         app:layout_constraintBottom_toTopOf="@+id/drink_button"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         tools:listitem="@layout/support_simple_spinner_dropdown_item"/>
 
-
     <Button
-        android:id="@id/drink_button"
+        android:id="@+id/drink_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/drink_button_text"
