--- a/coffee-counter/app/src/main/res/layout/activity_main.xml
+++ b/coffee-counter/app/src/main/res/layout/activity_main.xml
@@ -9,8 +9,8 @@
 
     <ListView
         android:id="@+id/coffee_times_list"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@+id/drink_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
